@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclThread.c,v 1.5 2000/04/05 00:42:20 welch Exp $
+ * RCS: @(#) $Id: tclThread.c,v 1.5.2.1 2002/12/10 04:12:19 hobbs Exp $
  */
 
 #include "tclInt.h"
@@ -417,9 +417,7 @@ TclFinalizeThreadData()
 	}
 #endif
     }
-#ifdef TCL_THREADS
     TclpMasterUnlock();
-#endif
 }
 
 /*
